Primera version del guess the song

--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -1,3 +1,26 @@
-<p>guess-song works!</p>
-<button class="btn btn-primary">Tengo el Token?</button>
-<!--//(click)="SpotifyService.funcionParaVer()"-->
+<body>
+    <div class="container">
+        <h1>🎵 Guess the Song 🎵</h1>
+
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="btn btn-outline-dark" type="button" (click)="getThePlaylistForGuess()">Empezar a jugar</button>
+        </div>
+
+        <div class="hints">
+            <p *ngIf="hintMessage">{{hintMessage}}</p>
+            <div class="album-container" *ngIf="albumImageUrl">
+                <img class="albumCover" [src]="albumImageUrl" width="200" height="200">
+            </div>
+        </div>
+        
+        <audio controls id="audioPlayer"></audio>
+
+        <div class="d-grid gap-2 d-md-block">
+            <button *ngFor="let song of randomSongs" class="btn btn-outline-success" type="button"
+                (click)="handleOptionClick(song)">{{ song.track.name }}</button>
+        </div>
+
+        <button type="button" class="btn btn-outline-warning" (click)="showHint()">Hint</button>
+
+    </div>
+</body>
