--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -15,6 +15,11 @@ h1 {
     color: rgba(0, 0, 0, 0.87); 
 }
 
+.buttons
+{
+    margin-right: 20px;
+}
+
 .hints {
     font-size: 25px; 
     color: rgba(0, 0, 0, 0.932); 
