--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <a class="nav-link" [routerLink]="['/make-a-playlist']" routerLinkActive="active" href="#">Make a playlist</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Social</a>
+            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
           </li>
         </ul>
       </div>
