[AP-9]Persistencia de los users

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
     <button (click)="loginSpotify()">Connect Spotify</button>
     <button (click)="getAlgo()">artistas seguidos</button>
-
+    <button (click)="onAddUser()">añadir user a bdd</button>
   </div>
