--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
+<app-navbar></app-navbar>
 <div>
-    <button (click)="loginSpotify()">Connect Spotify</button>
     <button (click)="getAlgo()">artistas seguidos</button>
-
   </div>
