--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,11 +4,9 @@ body{
     font-family: Arial, sans-serif;
 }
 
-.container {
-    position: relative;
-    height: 100%;
-}
-
+.animate__animated.animate__fadeInUpBig {
+    --animate-duration: 0.7s;
+  }
 
 .background-image {
     background-image: url('https://wallpapercave.com/wp/wp5134857.png');
@@ -20,6 +18,16 @@ body{
     z-index: -1;
 }
 
+.video-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+  }
 .content {
     position: absolute;
     top: 50%;
@@ -32,6 +40,7 @@ body{
 .logo-image {
     width: 400px; /* Ajusta el ancho según sea necesario */
     height: auto; /* La altura se ajustará automáticamente para mantener la relación de aspecto */
+
 }
 
 .section {
@@ -50,6 +59,7 @@ body{
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 29%;
     background-color: black;
     color: white;
     padding: 20px 0;
@@ -57,9 +67,8 @@ body{
 }
 
 .footer-content {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+    position: fixed;
+    width: 100%;
 }
 
 .footer-content a {
@@ -73,7 +82,7 @@ body{
 
 button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #18D860;
     color: white;
     border: none;
     border-radius: 5px;
@@ -83,5 +92,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #18D860;
 }
