--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -8,7 +8,7 @@
     <div class="container">
         <h1 class="animate__animated animate__zoomIn">🎵 Guess the Song 🎵</h1>
 
-        <div class="animate__animated animate__zoomIn">
+        <div class="animate__animated animate__fadeInRightBig">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <button class="btn btn-dark" type="button" (click)="getThePlaylistForGuess()">Empezar a jugar</button>
             </div>
@@ -21,15 +21,15 @@
             </div>
         </div>
 
-        <audio controls id="audioPlayer" class="animate__animated animate__zoomIn"></audio>
+        <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig" ></audio>
 
-        <div class="animate__animated animate__zoomIn">
+        <div>
             <button style="margin: 0 5px; margin-bottom: 6px;" *ngFor="let song of randomSongs" class="btn btn-dark"
-                class="animate__animated animate__zoomIn" type="button" (click)="handleOptionClick(song)">{{
+                type="button" (click)="handleOptionClick(song)">{{
                 song.track.name }}</button>
         </div>
 
-        <div class="animate__animated animate__zoomInUp">
+        <div class="animate__animated animate__fadeInRightBig">
             <button type="button" class="btn btn-dark" (click)="showHint()"
                 [disabled]="hintButtonDisabled">Hint</button>
         </div>
