AP-76/77/78/80 formulario de preguntas, algoritmo.

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,20 +1,26 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" >
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/guess-song']" routerLinkActive="active" href="#">Guess Song!</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/make-a-playlist']" routerLinkActive="active" href="#">Make a playlist</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
-          </li>
-        </ul>
+  <div class="container-fluid">
 
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/guess-song']" routerLinkActive="active" href="#">Guess Song!</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/make-a-playlist']" routerLinkActive="active" href="#">Make a playlist</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
+        </li>
+      </ul>
+      
     </div>
+  </div>
   </nav>
   
