--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<body>
 <div>
     <button (click)="getTopArtists()">top artistas</button>
     <button (click)="getTopSongs()">top songs</button>
@@ -6,3 +7,5 @@
     <button (click)="getUserData()">ver data</button>
     <button (click)="onAddSong()">añadir canciones</button>
   </div>
+</body>
+
