AP-50 TOP SONGS ARTIST

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" [routerLink]="['/make-a-playlist']" routerLinkActive="active" href="#">Make a playlist</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
+          <a class="nav-link" [routerLink]="['/stats']" routerLinkActive="active" href="#">Stats</a> 
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" href="#">Login</a> 
