--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,34 @@
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<body class="background-image">
-  <div class="container">
-    <div class="section">
-      <div>
-        <img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/spotify_logo_icon_168793.png" alt="Logo"
+
+  
+  <body class="background-image">
+    <div class="container">
+      <div class="section">
+        <div>
+          <img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/spotify_logo_icon_168793.png" alt="Logo"
           class="logo-image">
-        <h2 class="tagline">Únite y divertite un rato</h2>
-        <button type="button" class="btn btn-success" (click)="login()">Login</button>
+          <h2 class="tagline">Únite y divertite un rato</h2>
+          <button type="button" class="btn btn-success" (click)="login()">Login</button>
+        </div>
       </div>
+      
+      <footer class="footer">
+        <div class="footer-content">
+          
+          <a href="https://www.linkedin.com/in/kevin-tolosa-a3a328221" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Botón" />
+          </a>
+          
+          <a href="https://www.linkedin.com/in/franco-g%C3%BCidi/" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Botón" />
+          </a>
+          
+          <a href="https://github.com/francoguidi01/Apify-Name-In-Progress" target="_blank">
+            <img src="   https://cdn-icons-png.flaticon.com/512/733/733553.png " alt="Botón" />
+          </a>
+        </div>
+        <p>Proyecto X - Facultad de Profesores - Materia Y</p>
+      </footer>
     </div>
-
-    <footer class="footer">
-      <div class="footer-content">
-
-        <a href="https://www.linkedin.com/in/kevin-tolosa-a3a328221" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Botón" />
-        </a>
-
-        <a href="https://www.linkedin.com/in/franco-g%C3%BCidi/" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Botón" />
-        </a>
-
-        <a href="https://github.com/francoguidi01/Apify-Name-In-Progress" target="_blank">
-          <img src="   https://cdn-icons-png.flaticon.com/512/733/733553.png " alt="Botón" />
-        </a>
-      </div>
-      <p>Proyecto X - Facultad de Profesores - Materia Y</p>
-    </footer>
-  </div>
-</body>
+  </body>
