Actualizacion del dev

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,3 +1,17 @@
 <app-navbar></app-navbar>
 <body>
+    <div class="profileContainer">
+        <div class="profilePhoto">
+          <img [src]="imageUrl" alt="Foto de perfil" />
+        </div>
+        <div *ngIf="userData" class="profileText">
+          <h2 *ngIf="new; else returningUser">
+            Bienvenido {{ userData.display_name }}!
+          </h2>
+          <ng-template #returningUser>
+            <h2>Bienvenido de vuelta {{ userData.display_name }}!</h2>
+          </ng-template>
+        </div>
+      </div>
+      
 </body>
