--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -10,3 +10,28 @@ body {
     margin: 0;
 }
 
+.profileContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px; /* Ajusta el margen superior según sea necesario */
+  }
+  
+  .profilePhoto {
+    margin-bottom: 10px;
+    width: 150px; /* Ajusta el tamaño según sea necesario */
+    height: 150px; /* Ajusta el tamaño según sea necesario */
+    border-radius: 50%; /* Hace que la imagen sea redonda */
+    overflow: hidden; /* Oculta cualquier contenido que se salga del área del círculo */
+  }
+  
+  .profilePhoto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta la imagen para cubrir completamente el contenedor redondeado */
+  }
+  
+  .profileText {
+    text-align: center;
+    margin-top: 10px; /* Ajusta el margen superior según sea necesario */
+  }
